<resources>
    <string name="app_name">Health</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="HealthApp">username</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">                  Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>

    <string name="error_invalid_Name">The input value is too short</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_confirmed_required">passwords dont match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_message">don\'t have an account? Sign up</string>

    <string name="splashIntro">version 1.0</string>

    <!-- Strings related to signup -->
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_message">Already have an account? Sign in</string>
    
    <!-- Fragments -->
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>

    <!-- Recycler View-->
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="activity">Add User</string>
    <string name="descriptions">You are able to add your users here</string>
</resources>
