<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jil.myproject_prototype2sqlite.signup_activity">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/user_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/first_name" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_first_name"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/last_name" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_last_name"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/username" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_username"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/confirm_password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/confirm_password"
                    android:inputType="textPassword" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/username_sign_up_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_up"
                android:textSize="15sp"
                android:background="@color/secondaryBackground3"
                android:textColor="@color/secondaryBackground2"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/tvSignUpMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_message"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:clickable="true"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
